Création : 4 pages HTML, un fichier JS Ajout : le dossier d'API

--- a/cart.html
+++ b/cart.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <title>Orinoco | Panier</title>
+    <script defer src="js/main.js"></script>
 
 </head>
 <body>
@@ -33,7 +34,7 @@
     <div class="container my-5">
         <div class="row">
             <!-- Cart list -->
-            <div id="container-product" class="col-12 col-md-6"></div>
+            <div id="container-cart" class="col-12 col-md-6"></div>
             <!-- End Cart list -->
             <!-- Form -->
             <div id="container-form" class="col-12 col-md-6">
