--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!-- End fontawesome -->
     <link rel="stylesheet" href="css/style.css" />
-
     <title>Orinoco | E-commerce Caméra vintage</title>
-
+    <script defer src="js/main.js"></script>
+    
 </head>
 <body>
     <header>
@@ -33,8 +33,8 @@
         <h2 class="h4 my-5">Nos produits</h2>
     </div>
     <!-- Products list zone -->
-    <div id="product-list" class="container">
-
+    <div class="container">
+        <div id="product-list" class="row"></div>
     </div>
     <!-- End Products list zone -->
     <!-- Script for Bootstrap -->
