--- a/payment-success.html
+++ b/payment-success.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <title>Orinoco | Paiement réussi</title>
+    <script defer src="js/main.js"></script>
 
 </head>
 <body>
