--- a/product.html
+++ b/product.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <title>Orinoco | </title>
+    <script defer src="js/main.js"></script>
 
 </head>
 <body>
@@ -31,12 +32,7 @@
     </header>
 
     <!-- Product Detail -->
-    <div id="product-container" class="container">
-        <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-        </div>
-    </div>
+    <div id="product-description" class="container"></div>
     <!-- End Product Detail -->
     <!-- Script for Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
