ajout : function regexEffect, showOrderInfo

--- a/payment-success.html
+++ b/payment-success.html
@@ -30,17 +30,7 @@
             </a>
         </nav>
     </header>
-    <div class="container my-5">
-        <div class="d-flex flex-column align-items-center">
-            <i id="check-circle" class="fas fa-check-circle text-success display-1"></i>
-            <h1 class="my-3">Paiement réussi</h1>
-            <!-- Return to main page -->
-            <a class="btn btn-primary" href="index.html">Retournez à la page d'acceuil</a>
-            <!-- End Return to main page -->
-        </div>
-        <!-- Show client name and product -->
-        <div id="paiement-message"></div>
-        <!-- End Show client name and product -->
+    <div class="container my-5" id="container-payment">
     </div>
     <!-- Script for Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
