--- a/cart.html
+++ b/cart.html
@@ -34,32 +34,33 @@
     <div class="container my-5">
         <div class="row">
             <!-- Cart list -->
-            <div id="container-cart" class="col-12 col-md-6"></div>
+            <div id="container-cart" class="col-12 col-md-6"><h1 class="h3">Votre panier</h1></div>
             <!-- End Cart list -->
             <!-- Form -->
             <div id="container-form" class="col-12 col-md-6">
                 <form id="form-customer">
+                    <h2 class="h3">Contact</h2>
                     <div class="form-row">
                         <div class="form-group col-12 col-md-6">
                             <label for="firstName">Prénom</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="Prénom" pattern="^[A-Za-z]+$" required>
+                            <input type="text" class="form-control" id="firstName" placeholder="Prénom" pattern="^[A-Za-z]+$">
                         </div>
                         <div class="form-group col-12 col-md-6">
                             <label for="lastName">Nom</label>
-                            <input type="text" class="form-control" id="lastName" placeholder="Nom" pattern="^[A-Za-z]+$" required>
+                            <input type="text" class="form-control" id="lastName" placeholder="Nom" pattern="^[A-Za-z]+$">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" placeholder="Adresse" pattern="^[#.0-9a-zA-Z\s,-]+$" required>
+                        <input type="text" class="form-control" id="address" placeholder="Adresse" pattern="^[#.0-9a-zA-Z\s,-]+$">
                     </div>
                     <div class="form-group">
                         <label for="city">Ville</label>
-                        <input type="text" class="form-control" id="city" placeholder="Ville" pattern="^[#.a-zA-Z\s,-]+$" required>
+                        <input type="text" class="form-control" id="city" placeholder="Ville" pattern="^[#.a-zA-Z\s,-]+$">
                     </div>
                     <div class="form-group">
                         <label>Email</label>
-                        <input type="text" class="form-control" id="email" placeholder="abc@xyz.com" pattern="^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,6}$" required>
+                        <input type="text" class="form-control" id="email" placeholder="abc@xyz.com" pattern="^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,6}$">
                     </div>
                     <div>
                         <button type="submit" onchange="payment-success.html" class="btn btn-primary" id="send">Acheter</button>
