--- a/cart.html
+++ b/cart.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <title>Orinoco | Panier</title>
-    <script defer src="js/main.js"></script>
 
 </head>
 <body>
@@ -22,11 +21,9 @@
             <a class="navbar-brand" href="index.html">
                 <img src="img/logo_orinoco.png" alt="logo Orinoco"/>
             </a>
-            <a href="cart.html" class="nav-item">
-                <button type="button" class="btn btn-light">
-                    <i class="fas fa-shopping-cart"></i>
-                    <span class="d-none d-md-block">Panier</span>
-                </button>
+            <a href="cart.html" class="nav-item btn btn-light">
+                <i class="fas fa-shopping-cart"></i>
+                <span class="d-none d-md-block">Panier</span>
             </a>
         </nav>
     </header>
@@ -43,20 +40,20 @@
                     <div class="form-row">
                         <div class="form-group col-12 col-md-6">
                             <label for="firstName">Prénom</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="Prénom" pattern="^[A-Za-z]+$">
+                            <input type="text" class="form-control" id="firstName" placeholder="Prénom" pattern="^[a-zA-Zéèçà$$âêîôûäëïöüÂÊÎÔÛÄËÏÖÜÀÆæÇÉÈŒœÙ]+(([',. -][a-zA-Zéèçà$$âêîôûäëïöüÂÊÎÔÛÄËÏÖÜÀÆæÇÉÈŒœÙ ])?[a-zA-Zéèçà$$âêîôûäëïöüÂÊÎÔÛÄËÏÖÜÀÆæÇÉÈŒœÙ]*)*$">
                         </div>
                         <div class="form-group col-12 col-md-6">
                             <label for="lastName">Nom</label>
-                            <input type="text" class="form-control" id="lastName" placeholder="Nom" pattern="^[A-Za-z]+$">
+                            <input type="text" class="form-control" id="lastName" placeholder="Nom" pattern="^[a-zA-Zéèçà$$âêîôûäëïöüÂÊÎÔÛÄËÏÖÜÀÆæÇÉÈŒœÙ]+(([',. -][a-zA-Zéèçà$$âêîôûäëïöüÂÊÎÔÛÄËÏÖÜÀÆæÇÉÈŒœÙ ])?[a-zA-Zéèçà$$âêîôûäëïöüÂÊÎÔÛÄËÏÖÜÀÆæÇÉÈŒœÙ]*)*$">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" placeholder="Adresse" pattern="^[#.0-9a-zA-Z\s,-]+$">
+                        <input type="text" class="form-control" id="address" placeholder="Adresse" pattern="^[#.0-9a-zA-Zéèçà$$âêîôûäëïöüÂÊÎÔÛÄËÏÖÜÀÆæÇÉÈŒœÙ\s,-]+$">
                     </div>
                     <div class="form-group">
                         <label for="city">Ville</label>
-                        <input type="text" class="form-control" id="city" placeholder="Ville" pattern="^[#.a-zA-Z\s,-]+$">
+                        <input type="text" class="form-control" id="city" placeholder="Ville" pattern="^[#.a-zA-Zéèçà$$âêîôûäëïöüÂÊÎÔÛÄËÏÖÜÀÆæÇÉÈŒœÙ\s,-]+$">
                     </div>
                     <div class="form-group">
                         <label>Email</label>
@@ -72,7 +69,9 @@
     </div>
     <!-- Script for Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <!-- End Script for Bootstrap -->
+    <script defer src="js/api-request.js"></script>
+    <script defer src="js/cart.js"></script>
 </body>
 </html>
