--- a/payment-complete.html
+++ b/payment-complete.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <title>Orinoco | Paiement réussi</title>
-    <script defer src="js/main.js"></script>
 
 </head>
 <body>
@@ -22,19 +21,19 @@
             <a class="navbar-brand" href="index.html">
                 <img src="img/logo_orinoco.png" alt="logo Orinoco"/>
             </a>
-            <a href="cart.html" class="nav-item">
-                <button type="button" class="btn btn-light">
-                    <i class="fas fa-shopping-cart"></i>
-                    <span class="d-none d-md-block">Panier</span>
-                </button>
+            <a href="cart.html" class="nav-item btn btn-light">
+                <i class="fas fa-shopping-cart"></i>
+                <span class="d-none d-md-block">Panier</span>
             </a>
         </nav>
     </header>
+    
     <div class="container my-5" id="container-payment">
     </div>
     <!-- Script for Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <!-- End Script for Bootstrap -->
+    <script defer src="js/payment-complete.js"></script>
 </body>
 </html>
